# Macin

./: .gitignore  MACIN_CLAUDE_CODE_MEGAPROMPT.md  MacinApp.entitlements  README.md  project.yml
.claude-flow/data/: auto-memory-store.json  graph-state.json  pending-insights.jsonl  ranked-context.json
.claude-flow/sessions/: current.json
ChromeExtension/: background.js  confirm.html  confirm.js  manifest.json  popup.html  popup.js
MacinApp/: AppDelegate.swift  MacinApp.swift  Theme.swift
MacinApp/Models/: DownloadStatus.swift  DownloadTask.swift
MacinApp/Network/: LocalHTTPServer.swift
MacinApp/StatusBar/: StatusBarController.swift
MacinApp/ViewModels/: DownloadViewModel.swift
MacinApp/Views/: AddURLSheet.swift  ContentView.swift  DownloadCard.swift
MacinApp/Views/Components/: GlassProgressStyle.swift  SpeedLabel.swift  StatusBadge.swift  VisualEffectBlur.swift  WindowAccessor.swift
MacinApp/XPC/: DownloadEngineProtocol.swift  EngineXPCClient.swift
MacinRustEngine/:    Cargo.toml  MacinEngine.h
MacinRustEngine/.claude-flow/data/: auto-memory-store.json  graph-state.json  pending-insights.jsonl  ranked-context.json
MacinRustEngine/.claude-flow/sessions/: current.json
MacinRustEngine/src/: engine.rs  lib.rs  progress.rs  resume.rs  segment.rs
NativeMessagingHost/: install_manifests.sh  main.swift
NativeMessagingHost/Manifests/: com.krishpotanwar.macin.chrome.json  com.krishpotanwar.macin.firefox.json
